edit on edit degrees
